# my-genAI-learnings

./: .gitignore  Vector Embedding.ipynb  pyproject.toml
